--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,13 +68,17 @@
     <Compile Include="Assets\GameCode\Enemies\TnS_EnemySpawner.cs" />
     <Compile Include="Assets\GameCode\EventScripts\EncounterEventController.cs" />
     <Compile Include="Assets\GameCode\EventScripts\UIEventController.cs" />
-    <Compile Include="Assets\GameCode\Items\TnS_Equipment.cs" />
-    <Compile Include="Assets\GameCode\Items\TnS_GoldPickup.cs" />
-    <Compile Include="Assets\GameCode\Items\TnS_Interactable.cs" />
+    <Compile Include="Assets\GameCode\Items\Interactable\TnS_GoldPickup.cs" />
+    <Compile Include="Assets\GameCode\Items\Interactable\TnS_Interactable.cs" />
+    <Compile Include="Assets\GameCode\Items\Interactable\TnS_ItemPickup.cs" />
+    <Compile Include="Assets\GameCode\Items\Interactable\TnS_WeaponPickup.cs" />
+    <Compile Include="Assets\GameCode\Items\Items\Data\EquipmentVO.cs" />
+    <Compile Include="Assets\GameCode\Items\Items\Data\ItemVO.cs" />
+    <Compile Include="Assets\GameCode\Items\Items\ScriptableObjects\TnS_EquipmentSO.cs" />
+    <Compile Include="Assets\GameCode\Items\Items\ScriptableObjects\TnS_ItemSO.cs" />
+    <Compile Include="Assets\GameCode\Items\Items\TnS_Equipment.cs" />
+    <Compile Include="Assets\GameCode\Items\Items\TnS_Item.cs" />
     <Compile Include="Assets\GameCode\Items\TnS_Inventory.cs" />
-    <Compile Include="Assets\GameCode\Items\TnS_Item.cs" />
-    <Compile Include="Assets\GameCode\Items\TnS_ItemPickup.cs" />
-    <Compile Include="Assets\GameCode\Items\TnS_WeaponPickup.cs" />
     <Compile Include="Assets\GameCode\PlayerAccount\PlayerAccountInformation.cs" />
     <Compile Include="Assets\GameCode\PlayerInputController.cs" />
     <Compile Include="Assets\GameCode\PlayerStats.cs" />
@@ -84,6 +88,7 @@
     <Compile Include="Assets\GameCode\TnS_Magic.cs" />
     <Compile Include="Assets\GameCode\TnS_PlayerCharacter.cs" />
     <Compile Include="Assets\GameCode\TnS_Presentation.cs" />
+    <Compile Include="Assets\GameCode\Utilities\EnumUtil.cs" />
     <Compile Include="Assets\GameCode\iDamagable.cs" />
     <Compile Include="Assets\IMPORTS\TAZO_3D_C\DemoScene\Action_Manage.cs" />
     <Compile Include="Assets\IMPORTS\TAZO_3D_C\DemoScene\demo.cs" />
