--- a/.gitignore
+++ b/.gitignore
@@ -338,9 +338,8 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-<<<<<<< HEAD
 /Temp
 =======
 /Temp/UnityLockfile
 /Temp/ProcessJobs
->>>>>>> 42dffdbbc3d0d2ec90c8fd51d88f729e7eb4f534
+/Library
